--- a/vulnerable/server/src/templates/questions.html
+++ b/vulnerable/server/src/templates/questions.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <div class="box">
   <p>Ask a question!</p>
@@ -11,18 +9,14 @@
   </form>
 </div>
 
-{% for question in questions %}
+{% for question in questions|reverse %}
 <div class="box">
   <p>{{ question }}</p>
-    <form action="/answers" method="POST">
-      <label for="answer">Answer:</label>
-      <input type="text" id="answer" name="answer" /><br /><br />
+  <form action="/answers" method="POST">
+    <input type="hidden" name="question" value="{{ question }}" />
+    <label for="answer">Answer:</label>
+    <input type="text" id="answer" name="answer" /><br /><br />
     <input type="submit" value="Submit" />
   </form>
 </div>
-{% endfor %}
-
-
-
-
-{% endblock %}
+{% endfor %} {% endblock %}
