Implemended basic forum functionalities

--- a/vulnerable/server/src/templates/base.html
+++ b/vulnerable/server/src/templates/base.html
@@ -11,14 +11,7 @@
     />
   </head>
 
-  <body onload="alertMessage()">
-    {% if resStatus %}
-    <script>
-      function alertMessage() {
-        alert(" {{ resStatus }} ");
-      }
-    </script>
-    {% endif %}
+  <body>
     <section class="hero is-primary is-fullheight">
       <div class="hero-head">
         <nav class="navbar">
