--- a/vulnerable/server/src/templates/index.html
+++ b/vulnerable/server/src/templates/index.html
@@ -5,6 +5,6 @@
   Vulnerable Forum
 </h1>
 <h2 class="subtitle">
-  Welcome to vulnerable forum!
+  Welcome to vulnerable forum, {{ username }}!
 </h2>
 {% endblock %}
