--- a/vulnerable/server/src/templates/answers.html
+++ b/vulnerable/server/src/templates/answers.html
@@ -8,7 +8,7 @@
 {% endwith %}
 
 <div class="box">
-    <h1>{{ question.question_text }}</h1>
+    <h1>{{ question.question_text | safe }}</h1>
 </div>
 
 <div class="box">
