--- a/well-secured/server/src/templates/login.html
+++ b/well-secured/server/src/templates/login.html
@@ -24,6 +24,7 @@
                 </div>
             </div>
             <button class="button is-block is-info is-large is-fullwidth">Login</button>
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         </form>
     </div>
 </div>
